--- a/part-3/rails-app/Gemfile
+++ b/part-3/rails-app/Gemfile
@@ -17,6 +17,8 @@ gem 'haml-rails'
 gem 'rubocop-rails'
 gem 'rubocop-rspec'
 gem 'simple_form'
+gem 'dry-struct'
+gem 'dry-validation'
 
 group :development, :test do
   gem 'byebug', platforms: %i[mri mingw x64_mingw]
