Fix Rubocop rules

--- a/part-3/rails-app/.rubocop.yml
+++ b/part-3/rails-app/.rubocop.yml
@@ -3,6 +3,14 @@ require:
   - rubocop-rspec
 Style/Documentation:
   Enabled: false
+Metrics/BlockLength:
+  Exclude:
+    - "spec/**/*"
+Rails/HasManyOrHasOneDependent:
+  Enabled: false
+RSpec/ExampleLength:
+  Enabled: false
+RSpec/MessageSpies:
+  Enabled: false
 AllCops:
   NewCops: enable
-
