--- a/part-3/rails-app/.rubocop.yml
+++ b/part-3/rails-app/.rubocop.yml
@@ -3,6 +3,8 @@ require:
   - rubocop-rspec
 Style/Documentation:
   Enabled: false
+Style/MultilineBlockChain:
+  Enabled: false
 Metrics/BlockLength:
   Exclude:
     - "spec/**/*"
