--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 
 /part-3/rails-app/tmp/*
 /part-3/rails-app/log/*
-
+/part-3/rails-app/db/*.sqlite3
 
 /part-3/rails-app/config/master.key
-/part-3/rails-app/config/.byebug_history
+/part-3/rails-app/.byebug_history
 
