Add specs for InvitationService::Sender

--- a/part-3/rails-app/.rubocop.yml
+++ b/part-3/rails-app/.rubocop.yml
@@ -14,5 +14,7 @@ RSpec/ExampleLength:
   Enabled: false
 RSpec/MessageSpies:
   Enabled: false
+RSpec/NamedSubject:
+  Enabled: false
 AllCops:
   NewCops: enable
